# koworking

./: .env.example  .flake8  .gitignore  .isort.cfg  Dockerfile  README.md  docker-compose.yml  pyproject.toml
requirements/: prod.txt  test.txt
web/: main.py
web/api/: __init__.py  auth.py  booking.py  core.py  user.py
web/config/: __init__.py  db.py  settings.py  tags.py
web/core/: security.py
web/db/: database.py  models.py
web/db/dao/: __init__.py  base.py  dao.py
web/schemas/: auth.py  booking.py  user.py
web/tests/: conftest.py  test_api.py
