[tool.black]
line-length = 79
skip-string-normalization = true
skip-magic-trailing-comma = false
[project]
name = "koworking"
version = "0.1.0"
description = ""
authors = [
    {name = "Chernov2312",email = "113832662+Chernov2312@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.137.0",
    "uvicorn==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "sqlalchemy==2.0.50",
    "asyncpg==0.31.0",
    "python-multipart==0.0.32",
    "pyjwt==2.13.0",
    "pwdlib[argon2]==0.3.0",
    "python-dotenv==1.2.2",
    "anyio==4.13.0",
    "greenlet==3.5.1",
    "click==8.4.1",
    "colorama==0.4.6",
    "h11==0.16.0",
    "idna==3.18",
    "markupsafe==3.0.3",
    "starlette==1.3.1",
    "typing_extensions==4.15.0"
]
[dependency-groups]
dev = [
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "domdf_python_tools==3.10.0",
    "flake8==7.3.0",
    "flake8-absolute-import==1.0.0.3",
    "flake8-bugbear==25.11.29",
    "flake8-commas==4.0.0",
    "flake8-dunder-all==0.5.0",
    "flake8-isort==6.1.1",
    "flake8-quotes==3.4.0",
    "isort==5.13.0",
    "pep8-naming==0.15.1"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
